<resources>
    <string name="app_name">astronomy_handbook</string>
    <string name="astronomy">Астрономия</string>
    <string name="thirty_seconds">за 30 секунд</string>
    <string name="planets">Планеты</string>
    <string name="solar_system">Солнечная система</string>
    <string name="stars">Звезды</string>
    <string name="milky_way">Млечный путь</string>
    <string name="universe">Вселенная</string>
    <string name="space_time">Пространство и время</string>
    <string name="article_mercury">Меркурий - самая маленькая из восьми планет диаметром 4879 километров. Поскольку она еще
    и самая близкая к Солнцу, она быстрее других обращается по своей орбите - всего за 88 земных дней.
        Но при этом один оборот вокруг своей оси она совершает за 59 земных дней, то есть на три оборота вокруг оси приходятся два оборота
        вокруг Солнца. Из-за такого необычного вращения календарь на Меркурии тоже довольно необычен: одни сутки от восхода до восхода там длятся два меркурианских года, или 176 земных дней</string>
    <string name="article">Статья</string>
</resources>